# hugo-gettext

./: .gitignore  README.md  environment.yml  poetry.lock.license  pyproject.toml
hugo_gettext/: cli.py  compilation.py  config.py  renderer_localized_md.py  utils.py
hugo_gettext/extraction/: __init__.py  e_domain.py  extraction_utils.py  i18n_content.py  i18n_data_others.py  i18n_object.py  index.py  renderer_hugo_i18n.py  renderer_md_i18n.py
hugo_gettext/generation/: __init__.py  g_domain.py  g_lang.py  generation_content.py  generation_data_others.py  generation_utils.py  index.py  l10n_object.py  renderer_hugo_l10n.py  renderer_md_l10n.py
tests/: test_renderer_l10n.py  test_renderer_localized_md.py  test_renderer_md_l10n.py
tests/resources/: attributes.md  blockquotes.md  definition_list.md  lists.md  renderer.md
