# SPDX-FileCopyrightText: 2023 Phu Hung Nguyen <phuhnguyen@outlook.com>
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "hugo-gettext"
version = "0.4.0"
description = "I18n with gettext for Hugo"
authors = ["Phu Hung Nguyen <phuhnguyen@outlook.com>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/phunh/hugo-gettext"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Internationalization",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
packages = [{include = "hugo_gettext"}]

[tool.poetry.dependencies]
python = "^3.8"
mdit-py-i18n = "^0.1.1"
markdown-gettext = "^0.1.2"
mdit-py-hugo = "^0.3.1"

[tool.poetry.scripts]
hugo-gettext = 'hugo_gettext.cli:main'
hugo-i18n = 'hugo_gettext.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
